week01/koa-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-koa-deploy
spec:
  selector:
    matchLabels:
      app: hello-world-koa
  template:
    metadata:
      labels:
        app: hello-world-koa
    spec:
      containers:
        - name: hello-world-koa
          image: noname2048/hello-world-koa
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-koa-clusterip
spec:
  selector:
    app: hello-world-koa
  ports:
    - port: 80
      targetPort: 4000
